# NewsDigest

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml  requirements.txt  run_web.sh
.claude/: settings.json  settings.local.json
.claude/hooks/: notify-completion.sh  notify-interaction.sh
config/: global.yaml
output/reports/: finance-science-management-2026-04-02.md  finance-science-management-2026-04-04.md  finance-science-management-2026-04-05.md  finance-science-management-2026-04-06.md  finance-system-news-2026-04-01.md  tech_news-2026-04-02.md  tech_news-2026-04-03.md  tech_news-2026-04-04.md  wechat-人工智能-2026-04-01.md  wechat-浙江财政 2026-2026-04-01.md  wechat-浙江财政-2026-04-01.md  wechat-财政科学管理-2026-04-01.md
skills/: .skills_store_lock.json
skills/finance-system-news-search/: SKILL.md  accounts.yaml  crawl_official_websites.py  fetch_auto.py  fetch_content.py  fetch_interactive.py  generate_report.py  official_websites.yaml  pilot_keywords.yaml  search.py  search.sh  附件2-财政科学管理试点任务详情.md
skills/wechat-article-search/scripts/: search_wechat.js
web/: app.py
web/static/: style.css
web/templates/: index.html  report.html
